First completion of client side validation. Implement remote validation with AJAX next

--- a/Todo.txt
+++ b/Todo.txt
@@ -2,3 +2,4 @@
 default is apply client side validation for all fields.
 2. Test for complex object support such as an order have
 shipping and billing address.
+3. Allow error messages display at top like Grails default
