Ready for 1.1 released with following changes:   * Support Grails 1.2.2+.   * Support extensibility by [https://github.com/geofflane/grails-constraints custom constraints] plugin   * Updated person sample application.

--- a/src/sample-app/grails-app/i18n/messages.properties
+++ b/src/sample-app/grails-app/i18n/messages.properties
@@ -5,3 +5,6 @@ address.number.nullable=Address Number cannot be blank.
 # For server side validation
 person.workAddress.nullable=Work Address cannot be blank.
 person.homeAddress.nullable=Home Address cannot be blank.
+# Custom constraints
+person.phone.nullable=Phone number cannot be blank.
+person.phone.phone.invalid=[{2}] is not a valid international phone number.
